--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin Recipes</title>
+</head>
+<body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/baked_potato_soup.html">Baked Potato Soup Recipe</a></li>
+        <li><a href="recipes/chicken_minestrone_soup.html">Chicken Minestrone Soup Recipe</a></li>
+        <li><a href=""></a></li>
+    </ul>
+    
+</body>
+</html>
