2nd Vesion of Recipe project from Odin project.

--- a/recipes/baked_potato_soup.html
+++ b/recipes/baked_potato_soup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Baked Potato Soup Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/nEM9EwRCi53gaDkuHEPoF59pRnQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/baked-potato-soup-4x3-allrecipes-video-bf1bdf9a8578448c85683ad7eb0fbfe5.jpg" alt="Baked Potato Soup Recipe">
+    <img src="https://www.allrecipes.com/thmb/nEM9EwRCi53gaDkuHEPoF59pRnQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/baked-potato-soup-4x3-allrecipes-video-bf1bdf9a8578448c85683ad7eb0fbfe5.jpg" alt="Baked Potato Soup">
     <h2>ingridients</h2>
     <ul>
         <li>12 slices bacon</li>
