--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/baked_potato_soup.html">Baked Potato Soup Recipe</a></li>
         <li><a href="recipes/chicken_minestrone_soup.html">Chicken Minestrone Soup Recipe</a></li>
-        <li><a href=""></a></li>
+        <li><a href="recipes/mulligatawny_soup.html">Mulligatawny Soup Recipe</a></li>
     </ul>
     
 </body>
